bunkerweb-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bunkerweb
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: MY_STATIC_PUBLIC_IP_ADDRESS/32
    cert-manager.io/cluster-issuer: letsencrypt-prod
    bunkerweb.io/bunkerweb.domain.com_USE_UI: "yes"
    bunkerweb.io/bunkerweb.domain.com_INTERCEPTED_ERROR_CODES: "400 404 405 413 429 500 501 502 503 504"
    bunkerweb.io/bunkerweb.domain.com_MAX_CLIENT_SIZE: "50m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bunkerweb.domain.com
      secretName: bunkerweb.domain.com
  rules:
    - host: bunkerweb.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-bunkerweb-ui
                port:
                  number: 7000
